# Udyam-Sahayak

./: .gitignore  .mcp.json  PRD_final.md  README.md  TRD_final.md  UX_design_brief_final.md  appflow_final.md  backend_schema_final.md
.githooks/: pre-commit
.jetro/: mcp-config.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: admin.py  auth.py  models.py  sync.py
backend/app/schemas/: auth.py  models.py
backend/app/services/: auth_service.py  db_service.py  sync_service.py
backend/data/: local_mock.db
backend/scripts/: init_db.py
backend/sql/: 01_schema.sql  02_rls_policies.sql  03_seed_data.sql
backend/tests/: test_admin_and_gate3.py  test_api.py  test_health.py
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: HeaderBar.tsx
frontend/src/db/: indexedDB.ts
frontend/src/pages/: AdminDashboard.tsx  ConsentCapture.tsx  Dashboard.tsx  EnterpriseReg.tsx  Forecast.tsx  Login.tsx  ProxyForm.tsx
frontend/src/services/: api.ts  syncService.ts
frontend/src/styles/: index.css  theme.css
frontend/src/types/: index.ts
