[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kisan-credit-backend"
version = "0.1.0"
description = "Backend API for Udyam Sahayak (Gate 1 — Dairy Cluster)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.13.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary,pool]>=3.3.0",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
